# ResQNet

./: .gitignore  README.md
Android_Studio/: .gitignore  settings.gradle.kts
Android_Studio/app/: build.gradle.kts
Android_Studio/app/src/main/: AndroidManifest.xml
Android_Studio/app/src/main/res/drawable/: device_count_background.xml  input_background.xml  (+2 more)
Android_Studio/gradle/: libs.versions.toml
Android_Studio/gradle/wrapper/: gradle-wrapper.properties
backend/: .dockerignore  Dockerfile  app.py  config.py  crisis_management.db-shm  crisis_management.db-wal  database.py  iot_database.py  iot_sensors.db-shm  iot_sensors.db-wal  migrate_iot_full.py  migrate_iot_systemid.py  pyproject.toml  voice_emergency_bot.py
backend/routes/: incidents.py  iot.py  voice_bot.py
backend/utils/: ai_utils.py
crisis-command-dashboard/: package-lock.json  package.json
crisis-command-dashboard/app/: page.tsx
crisis-command-dashboard/app/landing/: page.tsx
crisis-command-dashboard/components/: incident-detail-view.tsx  incident-panel.tsx  iot-management.tsx  right-sidebar.tsx
crisis-command-dashboard/lib/: api.ts
field-responder-ui/app/: globals.css
field-responder-ui/app/user/: page.tsx
field-responder-ui/components/: bottom-nav.tsx  incidents-view.tsx
field-responder-ui/components/user/: user-home.tsx  voice-bot.tsx
field-responder-ui/lib/: api.ts
java backend/: build.gradle.kts  crisis_management.db
java backend/src/main/resources/: application.properties
scripts/: raspberry_pi_gateway.py  simulate_iot.py  simulate_iot_v2.py  voice_emergency_bot.py
(+48 files in other folders)
