[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "elevenlabs>=2.39.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.6.0",
    "gevent>=25.9.1",
    "gevent-websocket>=0.10.1",
    "google-genai>=1.62.0",
    "groq>=1.1.1",
    "pillow>=12.1.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "python-engineio>=4.13.0",
    "python-socketio>=5.16.0",
    "requests>=2.32.5",
    "speechrecognition>=3.15.1",
    "twilio>=9.10.1",
    "werkzeug>=3.1.5",
]
